# gnupg

./: Makefile.am  NEWS  README  configure.ac
agent/: agent.h  command-ssh.c  command.c  cvt-openpgp.c  divert-tpm2.c  findkey.c  genkey.c  gpg-agent.c  pkdecrypt.c  protect-tool.c  protect.c  trustlist.c
common/: asshelp.c  audit.c  compliance.c  dotlock.c  dotlock.h  homedir.c  init.c  iobuf.c  ksba-io-support.c  miscellaneous.c  openpgpdefs.h  percent.c  sexputil.c  status.h  stringhelp.c  stringhelp.h  strlist.c  strlist.h  sysutils.c  t-dotlock.c  t-stringhelp.c  tlv-parser.c  util.h  w32-cmdline.c
dirmngr/: crlcache.c  dirmngr.c  dirmngr.h  dns-stuff.c  dns.c  ks-action.c  ks-engine-http.c  ks-engine-ldap.c  ldapserver.c  ocsp.c  server.c
doc/: DETAILS  HACKING  dirmngr.texi  gnupg.texi  gpg.texi  gpgsm.texi  mkdefsinc.c  tools.texi
g10/: armor.c  build-packet.c  call-agent.c  call-agent.h  call-keyboxd.c  compress.c  cpr.c  decrypt-data.c  encrypt.c  export.c  free-packet.c  getkey.c  gpg.c  gpg.h  gpgv.c  import.c  keydb.c  keydb.h  keyedit.c  keygen.c  keyid.c  keylist.c  keyserver-internal.h  keyserver.c  main.h  mainproc.c  misc.c  openfile.c  options.h  packet.h  parse-packet.c  passphrase.c  pkclist.c  plaintext.c  pubkey-enc.c  sig-check.c  sign.c  skclist.c  test-stubs.c
kbx/: backend-cache.c  backend-sqlite.c  backend-support.c  backend.h  frontend.c  frontend.h  kbxserver.c  kbxutil.c  keybox-blob.c  keybox-defs.h  keybox-openpgp.c  keybox-search-desc.h  keybox-search.c  keybox-update.c  keyboxd.c  keyboxd.h
m4/: Makefile.am  ldap.m4
(+75 files in other folders)
