# Gnulib
EXTRA_DIST = autobuild.m4 codeset.m4 gettext.m4 iconv.m4        \
             intlmacosx.m4 lcmessage.m4 lib-ld.m4 lib-link.m4   \
             lib-prefix.m4 lock.m4 nls.m4 po.m4 progtest.m4     \
             readline.m4 socklen.m4

# pkg-config
EXTRA_DIST += pkg.m4

# Our own macros
EXTRA_DIST += ldap.m4 libusb.m4

# Our libraries
EXTRA_DIST += gpg-error.m4 libgcrypt.m4 libassuan.m4 ksba.m4 ntbtls.m4

EXTRA_DIST += ChangeLog-2011
